# index-data-test

./: .gitignore  Cargo.toml  bench.sh  build.sh  flake.nix
src/: main.rs
