[package]
name = "index-data-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
fjall = { version = "2.4.0", optional = true }
libsql = { version = "0.6.0", optional = true }
sled = { version = "0.34.7", optional = true }
sqlite = { version = "0.36.1", optional = true }
tokio = { version = "1.41.1", features = ["full"] }

[features]
baseline = []
sqlite = ["dep:sqlite"]
libsql = ["dep:libsql"]
sled = ["dep:sled"]
fjall = ["dep:fjall"]

